maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:49: error: type mismatch;
 found   : String
 required: Int
  var nbon:Int = litMessage();
                           ^JediEscaper:54: error: value Est is not a member of object plm.universe.Direction
    setDirection(Direction.Est);
                           ^JediEscaper:57: error: value Sud is not a member of object plm.universe.Direction
    setDirection(Direction.Sud);
                           ^JediEscaper:60: error: value Ouest is not a member of object plm.universe.Direction
    setDirection(Direction.Ouest);
                           ^JediEscaper:63: error: value Nord is not a member of object plm.universe.Direction
    setDirection(Direction.Nord);
                           ^